--- a/src/app/heroes/heroes.component.html
+++ b/src/app/heroes/heroes.component.html
@@ -1,11 +1,13 @@
-<div *ngIf="selectedHero">
+<!-- <div *ngIf="selectedHero">
   <h2>{{selectedHero.name | uppercase}}</h2>
   <div> id: {{selectedHero.id }}</div>
   <div>
     <label for="hero-name">Hero name: </label>
     <input id="hero-name" [(ngModel)]="selectedHero.name" placeholder="name">
   </div>
-</div>
+</div> -->
+
+<app-hero-detail [hero]="selectedHero"></app-hero-detail>
 
 <h2>My Heroes</h2>
 <ul class="heroes">
