--- a/src/app/heroes/heroes.component.css
+++ b/src/app/heroes/heroes.component.css
@@ -3,7 +3,6 @@
   margin: 0 0 2em 0;
   list-style-type: none;
   padding: 0;
-  width: 15em;
 }
 
 .heroes li {
@@ -63,4 +62,5 @@
 
 .heroes .name {
   align-self: center;
+  padding-right: 1rem;
 }
