--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,6 @@
-<h1>{{title}}</h1>
+<div style="display: flex; align-items: center; justify-content: space-around;">
+  <h1>{{title}}</h1> <app-messages></app-messages>
+</div>
 
 <app-heroes></app-heroes>
+
