--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,9 @@
+<nav>
+  <a routerLink="/heroes">Heroes</a>
+</nav>
 <div style="display: flex; align-items: center; justify-content: space-around;">
   <h1>{{title}}</h1> <app-messages></app-messages>
 </div>
 
-<app-heroes></app-heroes>
+<router-outlet>
 
